Create Home page

--- a/src/app/Home/main-page/main-page.component.html
+++ b/src/app/Home/main-page/main-page.component.html
@@ -1,1 +1,25 @@
-<p>main-page works!</p>
+<ng-container>
+
+  <div class="row mt-5">
+    <div class="col-12 d-flex justify-content-center">
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Enter URL" >
+      </mat-form-field>
+
+      <button mat-button  class="btn-search d-flex align-items-center" color="accent">
+        <mat-icon>search</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+
+    <div class="col-12 d-flex justify-content-center">
+    </div>
+
+  </div>
+
+
+</ng-container>
+
+
