Databinding Get Toxic Time

--- a/src/app/Home/main-page/main-page.component.html
+++ b/src/app/Home/main-page/main-page.component.html
@@ -3,17 +3,23 @@
   <div class="row mt-5">
     <div class="col-12 d-flex justify-content-center">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Enter URL" #urlInput>
+        <input matInput placeholder="Enter URL" #urlInput (keyup.enter)="setYouTubeValues(urlInput.value)">
       </mat-form-field>
 
       <button mat-button class="btn-search d-flex align-items-center" color="accent"
               (click)="setYouTubeValues(urlInput.value)">
-        <mat-icon>search</mat-icon>
+        <mat-icon class="icon-search">search</mat-icon>
       </button>
     </div>
   </div>
 
   <div class="row mt-5">
+    <div class="col-12 d-flex justify-content-center">
+      <mat-progress-bar mode="buffer" style="width: 55%" *ngIf="isLoading"></mat-progress-bar>
+    </div>
+  </div>
+
+  <div class="row mt-4">
     <div class="col-12 d-flex justify-content-center">
       <div #player></div>
     </div>
