Databinding False Information

--- a/src/app/Home/information-page/information-page.component.html
+++ b/src/app/Home/information-page/information-page.component.html
@@ -1,1 +1,19 @@
-<p>information-page works!</p>
+<div class="screen-container">
+
+<!--  <div class="row mt-4">-->
+<!--    <div class="col-12">-->
+<!--      <h3 class="bottom-line">Verify Information Accuracy</h3>-->
+<!--    </div>-->
+<!--  </div>-->
+
+  <div class="row mt-4">
+    <div class="col-12 d-flex justify-content-center">
+      <highcharts-chart [Highcharts]="HighCharts"
+                        [options]="pieChart">
+
+      </highcharts-chart>
+
+    </div>
+    <div>
+
+    </div>
