--- a/src/app/Home/information-page/information-page.component.html
+++ b/src/app/Home/information-page/information-page.component.html
@@ -6,14 +6,14 @@
 <!--    </div>-->
 <!--  </div>-->
 
-  <div class="row mt-4">
-    <div class="col-12 d-flex justify-content-center">
+<!--  <div class="row mt-4">-->
+    <div class="col-12 d-flex justify-content-center mt-4">
       <highcharts-chart [Highcharts]="HighCharts"
                         [options]="pieChart">
 
       </highcharts-chart>
 
     </div>
-    <div>
+<!--    <div>-->
 
     </div>
