--- a/src/app/Home/main-page/main-page.component.scss
+++ b/src/app/Home/main-page/main-page.component.scss
@@ -7,14 +7,16 @@
 
 .btn-search {
   height: 45px;
-  color: aliceblue;
-  margin-right: 10px;
-  border-radius: 10px;
+  width: 100px;
+  color: aliceblue !important;
+ // margin-right: 10px;
+  //border-radius: 10px;
   background-color: cornflowerblue;
 }
 
 .btn-search:hover {
   height: 45px;
+  color: cornflowerblue !important;
   background-color: transparent;
   border: 1px solid cornflowerblue;
 }
@@ -25,17 +27,44 @@
 }
 
 .btn-verify{
-  height: 45px;
-  color: aliceblue;
-  border-radius: 10px;
-  background-color: bisque;
+  height: 65px;
+  color: darkslateblue !important;
+  margin-right: 165px;
+  //border-radius: 10px;
+  background-color: azure;
 }
 
 .btn-verify:hover{
-  height: 45px;
+  height: 65px;
+  color: darkslateblue !important;
   border: 1px solid bisque;
   background-color: transparent;
 }
 
+.btn-pie-image{
+  width: 50px;
+  height: 50px;
+}
 
+.background-image {
+  position: absolute;
+  top: 60px;
+  right: 0;
+  width: 400px;
+  height: 400px;
+  z-index: -1;
+}
+
+.image {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+}
+
+
+
+
+//body {
+//  background-image: url("assets/Press pause.png");
+//}
 
