--- a/src/app/Home/main-page/main-page.component.scss
+++ b/src/app/Home/main-page/main-page.component.scss
@@ -61,10 +61,43 @@
   object-fit: cover;
 }
 
+.loading-bubbles {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
+.bubble {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  background-color: cornflowerblue;
+  border-radius: 50%;
+  animation: bubble-animation 1s ease-in-out infinite alternate;
+}
 
-//body {
-//  background-image: url("assets/Press pause.png");
-//}
+@keyframes bubble-animation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
 
+.bubble:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.bubble:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.bubble:nth-child(4) {
+  animation-delay: 0.3s;
+}
