--- a/src/app/Home/main-page/main-page.component.html
+++ b/src/app/Home/main-page/main-page.component.html
@@ -38,6 +38,9 @@
     </div>
   </div>
 
+  <div class="watermark"  *ngIf="isWaterMark">
+    Welcome !
+  </div>
 
 
   <!--  <div class="row mt-4">-->
