--- a/src/app/Home/main-page/main-page.component.scss
+++ b/src/app/Home/main-page/main-page.component.scss
@@ -101,3 +101,15 @@
 .bubble:nth-child(4) {
   animation-delay: 0.3s;
 }
+
+.watermark {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Curlz MT" ;
+  font-size: 150px;
+  font-weight: bold;
+  opacity: 0.2;
+  z-index: 1000;
+}
